src/test/deca/context/invalid/created/Objet/Passe_3/MultipleDeclarationParameter.deca
// Description:
//    teste la definition multiple d'un parametre
// Resultats:
//    Erreur contextuelle
//    Ligne 8 : Error: Multiple declaration of parameter a, first declaration at [8, 10]

class A {
    int m(int a, boolean a) {
        return 3;
    }
}

{

}